--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: arial, sans-serif;
   background-color: white;
@@ -16,6 +22,24 @@ body {
   align-items: center;
 }
 
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-bottom: 15px;
+}
+
+th,
+td {
+  padding: 10px;
+  text-align: left;
+  border: 1px solid whitesmoke;
+}
+
+th {
+  background-color: #3b429f;
+  color: white;
+}
+
 input {
   width: calc(50% - 10px);
   padding: 10px;
@@ -29,16 +53,10 @@ button {
   border: none;
   cursor: pointer;
   border-radius: 5px;
+  margin-top: 10px;
 }
 
 #message {
   margin-top: 15px;
   color: red;
-}
-
-ul {
-  list-style-type: none;
-  padding: 0;
-  width: 100%;
-  margin-top: 15px;
 }
