--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,15 @@ input {
   margin: 5px;
 }
 
+#searchBox {
+  width: 100%;
+  margin-top: 10px;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid lightgray;
+  border-radius: 5px;
+}
+
 button {
   padding: 10px 15px;
   background-color: #3b429f;
